﻿Changelog

0.11.20
	Added new RCS support
		Turn off all RCS
		Turn on RCS in current Stage
		Global RCS Thrust limiter adjustment
		Current stage RCS Thrust limiter adjustment

0.11.19.2 
	Added support for RemoteTech Antennas

0.11.19.1
	Added AssemblyFileVersion
	Updated version file for 1.12

0.11.19
	Updated DMagic code, for both the old DMAPI and the DMModuleScienceAnimatedGeneric
	Updated MM code for AYA_Science and new kerbal models

0.11.18.3
	Really did the MiniAVC update

0.11.18.2
	Updated MiniAVC.dll to 1.4.0.2 to fix a nasty CTD

0.11.18.1
	Updated MiniAVC.dll to 1.4.0

0.11.18
	Added InstallChecker
	Rebuild for 1.8

0.11.17.3
	Added MM code to avoid adding AYA_Science to the kerbals in  the BG DLC to avoid getting duplicates 

0.11.17.2
	Version bump for 1.7.2
	Updated AssemblyVersion.tt for location-independent builds

0.11.17.1
	Fixed the AYA_ModuleGenericAnimation to allow multiple different modules in a single part

0.11.17
	Fixed bug in PAW for drills, when extending or retracting all, menu would not update properly
	Deleted unnecessary "using" lines
	Added general purpose AYA_ModuleGenericAnimation
		All parameters for ModuleGenericAnimation are valid
		Following new values are used:
			extendAll 		Message to display in PAW when parts are retracted.  Defaults to: "Extend all parts"
			retractAll		Message for when parts are extended/deployed.  Defaults to:  "Retract all parts"
			closedPosition	The animation value for when the parts are closed.  Defaults to 0, 
							if the parts are closed when the animation is run then set this equal to 1


0.11.16.4
	Enabled the following in the editor:
		Solar panels
		ActiveRadiator
		Radiator
		Cargo Bays

0.11.16.2
	Re-enabled the NearFutureSolar, using Reflection instead of direct reference

0.11.16.1
	Disabled the NearFutureSolar to avoid having a direct reference

0.11.16 
	Added NearFutureSolar panels to AYA_Solar
	Added support for multiple ModuleAnimateGeneric and multiple ModuleCargoBay modules