@@ -9,8 +9,8 @@
   "VERSION": {
     "MAJOR": 0,
     "MINOR": 11,
-    "PATCH": 19,
-    "BUILD": 2
+    "PATCH": 20,
+    "BUILD": 0
   },
   "KSP_VERSION": {
     "MAJOR": 1,
